--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
-    background-image: url(../starter-code/assets/tablet/image-footer.jpg);
+    background-image: url(./starter-code/assets/desktop/image-footer.jpg);
     opacity: 0.1;
     background-size: cover;
     background-position-x: center;
@@ -331,7 +331,7 @@
       margin: 0;
     }
     footer:before {
-      background-image: url(../starter-code/assets/tablet/image-footer.jpg);
+      background-image: url(./starter-code/assets/tablet/image-footer.jpg);
     }
   }
   @media only screen and (min-width: 1440px) {
